--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Train123"
         tools:targetApi="31">
         <activity
+            android:name=".CreateBook_activity"
+            android:exported="false" />
+        <activity
             android:name=".User_activity"
             android:exported="false" />
         <activity
